--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "3_nodemailer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "5.5.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "googleapis": "^128.0.0",
-    "nodemailer": "^6.9.7"
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.7",
+    "prisma": "^5.5.2"
   }
 }
